# SOPSynthesis

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/processing/: dedup.py  markers.py  pipeline.py  sensitive.py
backend/app/processing/generator/: __init__.py  base.py  template.py
backend/app/routers/: common.py  exports.py  guides.py  recordings.py  screenshots.py  settings.py  steps.py
backend/app/scripts/: dump_openapi.py
backend/app/services/: export_markdown.py  redaction.py  settings_store.py  storage.py
backend/tests/: conftest.py  helpers.py  seed_demo.py  test_api.py  test_dedup.py  test_generator.py  test_phase2.py
docs/: architecture.md  event-contract.md  getting-started.md
extension/: package.json  popup.html  tsconfig.json  vite.config.ts  vite.content.config.ts
extension/public/: manifest.json
extension/src/background/: capture.ts  index.ts  session.ts  uploader.ts
extension/src/content/: element-meta.ts  index.ts  typing.ts
extension/src/popup/: main.ts
extension/src/shared/: messages.ts  types.ts
scripts/: e2e-extension.mjs  gen-types.mjs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: ExportMenu.tsx  GuideHeader.tsx  InstructionEditor.tsx  ScreenshotEditor.tsx  StepCard.tsx  StepList.tsx  StepScreenshot.tsx
web/src/hooks/: useGuide.ts  useSettings.ts
web/src/pages/: GuideListPage.tsx  GuidePage.tsx  (+1 more)
